[gd_scene load_steps=9 format=3 uid="uid://b5fc4lv4wybum"]

[ext_resource type="PackedScene" uid="uid://c1uj8nhliop8j" path="res://Scenes/levels/Empty_Level.tscn" id="1_g0okr"]
[ext_resource type="PackedScene" uid="uid://cdpxkq752u0vl" path="res://Scenes/levels/Spawn/spawn.tscn" id="2_3uy1y"]
[ext_resource type="Script" path="res://Scenes/levels/procedural/Procedural_Level.gd" id="2_bwyy0"]
[ext_resource type="PackedScene" uid="uid://bfj6oao2wp4ge" path="res://Scenes/levels/procedural/bouncing_geometry.tscn" id="4_luhar"]
[ext_resource type="PackedScene" uid="uid://bihhmgl2g08o3" path="res://Scenes/levels/procedural/mesa_grower.tscn" id="5_l4mtl"]
[ext_resource type="PackedScene" uid="uid://drujlef4qyslo" path="res://Scenes/levels/procedural/brick_fields.tscn" id="6_rllxl"]
[ext_resource type="PackedScene" uid="uid://dnyf0qu40f6qt" path="res://Scenes/objects/ramp/ramp.tscn" id="7_4m7y7"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_6qhqu"]
properties/0/path = NodePath("Mesa_Grower:configuration")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="Procedural_Level" instance=ExtResource("1_g0okr")]
script = ExtResource("2_bwyy0")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="." index="0"]
replication_config = SubResource("SceneReplicationConfig_6qhqu")

[node name="spawns" type="Node3D" parent="." index="2"]

[node name="spawn1" parent="spawns" index="0" instance=ExtResource("2_3uy1y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 20)
skeleton = NodePath("../..")

[node name="spawn2" parent="spawns" index="1" instance=ExtResource("2_3uy1y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, -20)
skeleton = NodePath("../..")

[node name="spawn3" parent="spawns" index="2" instance=ExtResource("2_3uy1y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 10, 18)
skeleton = NodePath("../..")

[node name="spawn4" parent="spawns" index="3" instance=ExtResource("2_3uy1y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 10, -18)
skeleton = NodePath("../..")

[node name="spawn5" parent="spawns" index="4" instance=ExtResource("2_3uy1y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18, 10, 18)
skeleton = NodePath("../..")

[node name="spawn6" parent="spawns" index="5" instance=ExtResource("2_3uy1y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18, 10, -18)
skeleton = NodePath("../..")

[node name="spawn7" parent="spawns" index="6" instance=ExtResource("2_3uy1y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 10, 0)
skeleton = NodePath("../..")

[node name="spawn8" parent="spawns" index="7" instance=ExtResource("2_3uy1y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 10, 0)
skeleton = NodePath("../..")

[node name="Bouncing_Geometry" parent="." index="3" instance=ExtResource("4_luhar")]

[node name="Mesa_Grower" parent="." index="4" instance=ExtResource("5_l4mtl")]

[node name="Brick_Fields" parent="." index="5" instance=ExtResource("6_rllxl")]

[node name="Ramp" parent="." index="6" instance=ExtResource("7_4m7y7")]
height = 5.0
length = 10.0
thickness = 3.0
